[gd_scene load_steps=10 format=2]

[ext_resource path="res://GUI/Icons/gameicons-expansion/PNG/White/1x/toolPencil.png" type="Texture" id=1]
[ext_resource path="res://GUI/GUI Pieces/Player_Manager.gd" type="Script" id=2]
[ext_resource path="res://GUI/Icons/gameicons/PNG/White/1x/checkmark.png" type="Texture" id=3]
[ext_resource path="res://Images/Face.png" type="Texture" id=4]
[ext_resource path="res://GUI/Icons/gameicons/PNG/White/1x/cross.png" type="Texture" id=5]
[ext_resource path="res://GUI/Themes/JABOS.theme" type="Theme" id=6]

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 1 )
border_width_right = 10
border_color = Color( 0, 0, 0, 0.780392 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20
expand_margin_left = 12.0
expand_margin_right = 12.0

[sub_resource type="Gradient" id=13]
offsets = PoolRealArray( 0, 0.183784, 0.372973, 0.52973, 0.67027, 0.827027, 1 )
colors = PoolColorArray( 1, 0, 0, 1, 1, 0.801113, 0, 1, 0.359375, 1, 0, 1, 0, 1, 1, 1, 0.617188, 0, 1, 1, 1, 0, 0.547132, 1, 1, 0, 0, 1 )

[sub_resource type="GradientTexture" id=14]
gradient = SubResource( 13 )

[node name="Player" type="Button"]
margin_right = 976.0
margin_bottom = 79.0
rect_min_size = Vector2( 0, 85 )
theme = ExtResource( 6 )
text = "Manage"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -39.5
margin_right = 79.0
margin_bottom = 39.5
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mask" type="TextureRect" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -39.5
margin_right = 79.0
margin_bottom = 39.5
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Editor" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Manage" type="HBoxContainer" parent="Editor"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Done" type="Button" parent="Editor/Manage"]
margin_left = 175.0
margin_right = 310.0
margin_bottom = 79.0
text = "Done"
icon = ExtResource( 3 )

[node name="Color" type="Button" parent="Editor/Manage"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 360.0
margin_right = 579.0
margin_bottom = 79.0
text = "Edit Color"
icon = ExtResource( 1 )

[node name="Remove" type="Button" parent="Editor/Manage"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 629.0
margin_right = 801.0
margin_bottom = 79.0
text = "Remove"
icon = ExtResource( 5 )

[node name="Color" type="HBoxContainer" parent="Editor"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 24
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Done" type="Button" parent="Editor/Color"]
margin_left = 7.0
margin_right = 142.0
margin_bottom = 79.0
text = "Done"
icon = ExtResource( 3 )

[node name="Player" type="TextureRect" parent="Editor/Color"]
margin_left = 166.0
margin_right = 245.0
margin_bottom = 79.0
texture = ExtResource( 4 )

[node name="Mask" type="TextureRect" parent="Editor/Color/Player"]
modulate = Color( 1, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditColor" type="TextureRect" parent="Editor/Color"]
margin_left = 269.0
margin_right = 969.0
margin_bottom = 79.0
rect_min_size = Vector2( 700, 0 )
texture = SubResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="Editor/Color/EditColor"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="pressed" from="Editor/Manage/Done" to="." method="_on_Done_pressed"]
[connection signal="pressed" from="Editor/Manage/Color" to="." method="_on_Color_pressed"]
[connection signal="pressed" from="Editor/Manage/Remove" to="." method="_on_Remove_pressed"]
[connection signal="pressed" from="Editor/Color/Done" to="." method="_on_Color_Done_pressed"]
[connection signal="value_changed" from="Editor/Color/EditColor/HSlider" to="." method="_on_HSlider_value_changed"]
